[perf] Upd bench params